<resources>
    <string name="app_name">My Portfolio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_portfolio">MyPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="MNA">My Nanodegree Apps!</string>
    <string name="PM">Popular Movies</string>
    <string name="SH">Stock Hawk</string>
    <string name="BIB">Build It Bigger</string>
    <string name="MYAM">Make Your App Material</string>
    <string name="GU">Go Ubiquitous</string>
    <string name="CFinale">Capstone</string>



</resources>
