<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moataz.myportfolio.MyPortfolioFragment"
    tools:showIn="@layout/activity_my_portfolio">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/MNA"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:padding="20dp"/>

            <Button
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/PM"
                android:id="@+id/bt_pm"
                android:layout_gravity="center"
                android:background="#95a5a6"/>

            <Button
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/SH"
                android:id="@+id/bt_sh"
                android:layout_gravity="center"
                android:background="#95a5a6"/>

            <Button
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/BIB"
                android:id="@+id/bt_bib"
                android:layout_gravity="center"
                android:background="#95a5a6"/>

            <Button
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/MYAM"
                android:id="@+id/bt_myam"
                android:layout_gravity="center"
                android:background="#95a5a6"/>

            <Button
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/GU"
                android:id="@+id/bt_gu"
                android:layout_gravity="center"
                android:background="#95a5a6"/>

            <Button
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/CFinale"
                android:id="@+id/bt_cf"
                android:layout_gravity="center"
                android:background="#95a5a6"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
